# docs/framework/contracts/BP-CH-EXAMS-001.openapi.json
@@ -378,6 +378,11 @@
             "type": "string",
             "format": "date"
           },
+          "inaptitude_until": {
+            "type": "string",
+            "format": "date",
+            "nullable": true
+          },
           "validity_reduction_reason": {
             "type": "string",
             "nullable": true,
@@ -490,6 +495,11 @@
             "format": "date",
             "nullable": true
           },
+          "inaptitude_until": {
+            "type": "string",
+            "format": "date",
+            "nullable": true
+          },
           "validity_reduction_reason": {
             "type": "string",
             "nullable": true,
@@ -548,6 +558,11 @@
             "default": "now()"
           },
           "valid_until": {
+            "type": "string",
+            "format": "date",
+            "nullable": true
+          },
+          "inaptitude_until": {
             "type": "string",
             "format": "date",
             "nullable": true
